# FastAPI

./: .env  docker-compose.yaml  main.py  models.py  pyproject.toml  repo.py  routers.py  schema.py
alembic/: env.py
alembic/versions/: 2f405ee59bf8_initial_tables.py  976bc2c8c6d9_add_users_app.py
config/: db.py  general.py
src/auth/: email_utils.py  models.py  repo.py  routers.py  schema.py  utils.py
src/contacts/: models.py  repo.py  routers.py
src/templates/: verification_email.html
tests/: conftest.py  test_auth.py  test_repo_functions.py
